--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -41,7 +41,7 @@ html {
     background-color: $color-primary-light;
     color: $color-primary-darkest;
 
-    overflow: hidden;
+    overflow: hidden; // to keep the size at 100vh
 
     display: grid;
     grid-template-columns: 1fr;
