--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ html {
       resize: none;
       padding-left: 6.7rem;
       margin-top: -1.9rem;
-      font-family: 'Permanent Marker', sans-serif;
+      font-family: 'Permanent Marker', 'Pangolin', sans-serif;
       letter-spacing: 1px; }
     .about__form--info > .about--wrapper #actions,
     .about__form--info > .about--wrapper #inventory {
@@ -404,15 +404,19 @@ html {
 .projects {
   display: grid;
   grid-template-columns: max-content 1fr;
+  grid-gap: 3rem;
   height: 80vh;
   width: 100%;
   margin: 0 10rem;
   padding-top: 5rem;
-  padding-left: 5rem; }
+  padding-left: 5rem;
+  font-family: 'Special Elite', 'IM Fell English', sans-serif;
+  letter-spacing: 2px; }
   .projects__nav {
-    grid-column: 1 / 2; }
+    grid-column: 1 / 2;
+    margin-top: 10rem;
+    margin-left: 10rem; }
     .projects__nav--list {
-      padding: 1rem 2rem;
       list-style: none;
       border-left: 2px solid #202020;
       font-size: 1.8rem;
@@ -430,14 +434,49 @@ html {
       transition: all 0.5s; }
     .projects__nav--item > a:hover,
     .projects__nav--item > a:active,
-    .projects__nav--item > a:target {
+    .projects__nav--item > a:target,
+    .projects__nav--item > a:focus {
       background-position: -50% 100%;
       color: #EDEDED;
       transform: translateX(1rem); }
     .projects__nav--item:not(:last-child) {
       margin-bottom: 1rem; }
   .projects__container {
-    grid-column: 2 / 3; }
+    grid-column: 2 / 3;
+    border: 3px solid #202020;
+    border-radius: 12px;
+    margin-left: 18rem;
+    padding: 3rem;
+    width: 60rem;
+    height: 50rem; }
+  .projects__container > .project > .project__image {
+    width: 100%;
+    text-align: center; }
+    .projects__container > .project > .project__image > img {
+      height: 25rem;
+      padding: 1rem 2rem;
+      border: 5px solid #202020;
+      border-style: double;
+      border-radius: 12px; }
+  .projects__container > .project > .project__data > .project--title {
+    font-size: 1.8rem;
+    text-align: center;
+    padding: 1.2rem 0; }
+  .projects__container > .project > .project__data > .project--title > a > img {
+    vertical-align: middle;
+    padding-bottom: 0.6rem;
+    width: 2.4rem;
+    -webkit-filter: invert(100%);
+    filter: invert(100%); }
+  .projects__container > .project > .project__data > .project--stack {
+    font-size: 1.4rem;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 1.8rem; }
+  .projects__container > .project > .project__data > p {
+    font-size: 1.4rem;
+    text-align: justify;
+    line-height: 1.5; }
 
 .dark-mode > main > .projects > .projects__nav > .projects__nav--list {
   border-color: #EDEDED; }
@@ -452,5 +491,16 @@ html {
 
 .dark-mode > main > .projects > .projects__nav > .projects__nav--list > .projects__nav--item > a:hover,
 .dark-mode > main > .projects > .projects__nav > .projects__nav--list > .projects__nav--item > a:active,
-.dark-mode > main > .projects > .projects__nav > .projects__nav--list > .projects__nav--item > a:target {
+.dark-mode > main > .projects > .projects__nav > .projects__nav--list > .projects__nav--item > a:target,
+.dark-mode > main > .projects > .projects__nav > .projects__nav--list > .projects__nav--item > a:focus {
   color: #202020; }
+
+.dark-mode > main > .projects > .projects__container {
+  border-color: #EDEDED; }
+
+.dark-mode > main > .projects > .projects__container > .project > .project__image > img {
+  border-color: #EDEDED; }
+
+.dark-mode > main > .projects > .projects__container > .project > .project__data > .project--title > a > img {
+  -webkit-filter: invert(0%);
+  filter: invert(0%); }
