--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -77,7 +77,7 @@
             resize: none;
             padding-left: 6.7rem;
             margin-top: -1.9rem;
-            font-family: 'Permanent Marker', sans-serif;
+            font-family: 'Permanent Marker', 'Pangolin', sans-serif;
             letter-spacing: 1px;
         }
 
