--- a/css/style.css
+++ b/css/style.css
@@ -415,14 +415,15 @@ html {
   .projects__nav {
     grid-column: 1 / 2;
     margin-top: 10rem;
-    margin-left: 10rem; }
+    margin-left: 10rem;
+    margin-right: -3rem; }
     .projects__nav--list {
       list-style: none;
       border-left: 2px solid #202020;
       font-size: 1.8rem;
       padding: 2rem 5rem 2rem 3rem; }
     .projects__nav--item > a {
-      padding: 0.5rem 0.8rem; }
+      padding: 0.8rem 0.8rem 0.4rem 0.8rem; }
     .projects__nav--item > a:link,
     .projects__nav--item > a:visited {
       display: inline-block;
@@ -443,10 +444,10 @@ html {
       margin-bottom: 1rem; }
   .projects__container {
     grid-column: 2 / 3;
-    border: 3px solid #202020;
-    border-radius: 12px;
+    border-left: 3px solid #202020;
     margin-left: 18rem;
-    padding: 3rem;
+    padding-left: 5rem;
+    padding-top: 3rem;
     width: 60rem;
     height: 50rem; }
   .projects__container > .project > .project__image {
@@ -454,10 +455,11 @@ html {
     text-align: center; }
     .projects__container > .project > .project__image > img {
       height: 25rem;
-      padding: 1rem 2rem;
-      border: 5px solid #202020;
-      border-style: double;
-      border-radius: 12px; }
+      margin-bottom: 1.8rem;
+      box-shadow: 3px 3px 8px 5px rgba(32, 32, 32, 0.5);
+      transition: all 0.4s ease-in-out; }
+    .projects__container > .project > .project__image > img:hover {
+      transform: scale(1.1); }
   .projects__container > .project > .project__data > .project--title {
     font-size: 1.8rem;
     text-align: center;
@@ -467,7 +469,17 @@ html {
     padding-bottom: 0.6rem;
     width: 2.4rem;
     -webkit-filter: invert(100%);
-    filter: invert(100%); }
+    filter: invert(100%);
+    transition: all 0.2s ease; }
+  .projects__container > .project > .project__data > .project--title > a > img:hover {
+    transform: scale(1.1); }
+  .projects__container > .project > .project__data > .project--title > a > img.project--link {
+    margin-left: 0.8rem;
+    -webkit-filter: none;
+    filter: none;
+    transition: all 0.2s ease; }
+  .projects__container > .project > .project__data > .project--title > a > img.project--link:hover {
+    transform: scale(1.1); }
   .projects__container > .project > .project__data > .project--stack {
     font-size: 1.4rem;
     display: flex;
@@ -504,3 +516,7 @@ html {
 .dark-mode > main > .projects > .projects__container > .project > .project__data > .project--title > a > img {
   -webkit-filter: invert(0%);
   filter: invert(0%); }
+
+.dark-mode > main > .projects > .projects__container > .project > .project__data > .project--title > a > img.project--link {
+  -webkit-filter: invert(100%);
+  filter: invert(100%); }
