--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -15,6 +15,7 @@
         grid-column: 1 / 2;
         margin-top: 10rem;
         margin-left: 10rem;
+        margin-right: -3rem;
 
 
         &--list {
@@ -27,7 +28,7 @@
 
         &--item {
             & > a {
-                padding: 0.5rem 0.8rem;
+                padding: 0.8rem 0.8rem 0.4rem 0.8rem;
             }
 
             & > a:link,
@@ -62,10 +63,12 @@
     &__container {
         grid-column: 2 / 3;
 
-        border: 3px solid $color-primary-dark;
-        border-radius: 12px;
+        border-left: 3px solid $color-primary-dark;
+        // border-radius: 12px;
         margin-left: 18rem;
-        padding: 3rem;
+        // padding: 3rem;
+        padding-left: 5rem;
+        padding-top: 3rem;
         width: 60rem;
         height: 50rem;
     }
@@ -76,10 +79,18 @@
 
         & > img {
             height: 25rem;
-            padding: 1rem 2rem;
-            border: 5px solid $color-primary-dark;
-            border-style: double;
-            border-radius: 12px;
+            margin-bottom: 1.8rem;
+            // padding: 5rem;
+            // border-bottom: 3px solid $color-primary-dark;
+            // border-style: double;
+            // border-radius: 12px;
+
+            box-shadow: 3px 3px 8px 5px rgba(32, 32, 32, 0.5);
+            transition: all 0.4s ease-in-out;
+        }
+
+        & > img:hover {
+            transform: scale(1.1);
         }
     }
 
@@ -95,6 +106,22 @@
         width: 2.4rem;
         -webkit-filter: invert(100%);
         filter: invert(100%);
+        transition: all 0.2s ease;
+    }
+
+    &__container > .project > .project__data > .project--title > a > img:hover {
+        transform: scale(1.1);
+    }
+
+    &__container > .project > .project__data > .project--title > a > img.project--link {
+        margin-left: 0.8rem;
+        -webkit-filter: none;
+        filter: none;
+        transition: all 0.2s ease;
+    }
+
+    &__container > .project > .project__data > .project--title > a > img.project--link:hover {
+        transform: scale(1.1);
     }
 
     &__container > .project > .project__data > .project--stack {
@@ -149,6 +176,11 @@
 .dark-mode > main > .projects > .projects__container > .project > .project__data > .project--title > a > img {
     -webkit-filter: invert(0%);
     filter: invert(0%);
+}
+
+.dark-mode > main > .projects > .projects__container > .project > .project__data > .project--title > a > img.project--link {
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
 }
 
 // .projects {
