--- a/css/style.css
+++ b/css/style.css
@@ -520,3 +520,23 @@ html {
 .dark-mode > main > .projects > .projects__container > .project > .project__data > .project--title > a > img.project--link {
   -webkit-filter: invert(100%);
   filter: invert(100%); }
+
+.contact {
+  height: 80vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center; }
+  .contact > a > img {
+    height: 5rem;
+    opacity: 0.7;
+    transition: all 0.2s ease; }
+  .contact > a > img:hover {
+    transform: scale(1.1);
+    opacity: 1; }
+
+.dark-mode > main > .contact > a > img {
+  -webkit-filter: invert(100%);
+  filter: invert(100%); }
