--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,11 @@ html {
   .about__form {
     align-self: center;
     padding-right: 10rem;
-    margin-top: -8rem; }
+    margin-top: -8rem;
+    margin-left: 3rem; }
   .about__form--info {
     padding: 2rem;
-    border: solid 3px inherit;
+    border: solid 10px inherit;
     border-radius: 12px 0 12px 0;
     display: flex;
     flex-direction: column; }
