--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -18,6 +18,7 @@
         align-self: center;
         padding-right: 10rem;
         margin-top: -8rem;
+        margin-left: 3rem;
     }
 
     &__form--info {
