--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -71,7 +71,7 @@ html {
     background-color: $color-primary-light;
     
     & > p {
-        font-size: 1.25rem;
+        // font-size: 1.25rem;
         font-weight: 500;
         color: $color-primary-light;
         font-family: inherit;
@@ -83,24 +83,30 @@ html {
     padding-left: 41.5%;
 }
 
-.container > #about__footer {
-    grid-area: footer;
-    
-    background-color: transparent;
-
+#about__footer {
+    margin-top: -20rem;
     display: flex;
     align-items: center;
     justify-content: center;
     padding-left: 0;
-    margin-top: -20rem;
-    max-height: 5rem;
+
+    // grid-area: footer;
+    
+    // background-color: transparent;
+
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // padding-left: 0;
+    // margin-top: -20rem;
+    // max-height: 5rem;
         
-    & > p {
-        font-size: 1.25rem;
-        font-weight: 500;
-        color: inherit;
-        font-family: inherit;
-    }
+    // & > p {
+    //     font-size: 1.25rem;
+    //     font-weight: 500;
+    //     color: inherit;
+    //     font-family: inherit;
+    // }
 }
 
 // toggles bg-color and text-color of entire page
