import darkmode styles

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,10 @@
 @import "base";
 @import "typography";
+@import "darkmode";
 
-// @import "animations";
-// @import "footer";
 @import "header";
+@import "footer";
 @import "home";
 @import "projects";
 @import "about";
 @import "contact";
-// @import "skills";
-
