change id of centered footer

--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,7 @@ html {
   padding-top: 24rem;
   padding-left: 41.5%; }
 
-#about__footer {
+#centered__footer {
   margin-top: -20rem;
   display: flex;
   align-items: center;
