--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -15,7 +15,7 @@
     padding-left: 41.5%;
 }
 
-#about__footer {
+#centered__footer {
     margin-top: -20rem;
     display: flex;
     align-items: center;
