--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -76,6 +76,12 @@
         align-content: center;
 
         transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+        @media only screen and (max-width: 50em) {
+            height: 20vh;
+            background-color: $color-primary-light;
+            transition: background-color .4s ease-out;
+        }
     }
 
     &__list {
