--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -9,18 +9,33 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        @media only screen and (max-width: 50em) {
+            flex-direction: column;
+            position: relative;
+            // padding-top: 10rem;
+        }
     }
 
     &__data--img {
         margin-top: 8.25rem;
         padding-top: 3rem;
         width: 100%;
+        
+        @media only screen and (max-width: 50em) {
+            // margin-top: 20rem;
+            // padding-top: 10rem;
+        }
 
         & > img {
             width: 100%;
             height: 75rem;
             object-fit: cover;
             margin-bottom: -0.5rem;
+
+            @media only screen and (max-width: 50em) {
+                // height: 60rem;
+            }
         }
     }
 
@@ -28,6 +43,12 @@
         width: 100%;
         text-align: center;
         padding-top: 25rem;
+
+        @media only screen and (max-width: 50em) {
+            position: absolute;
+            left: 10rem;
+            top: -8rem;
+        }
     }
 
     &__data > &__data--name > h1 {
@@ -39,6 +60,10 @@
         margin-left: -25rem;
         position: relative;
         letter-spacing: 3.5px;
+
+        @media only screen and (max-width: 50em) {
+            font-size: 4rem;
+        }
 
         @media only screen and (max-width: 84.5em) {
             width: 100%;
@@ -53,6 +78,10 @@
             background-color: $color-primary-dark;
             bottom: 22rem;
 
+            @media only screen and (max-width: 50em) {
+                display: none;
+            }
+
             @media only screen and (max-width: 84.5em) {
                 width: 40rem;
             }
@@ -65,6 +94,13 @@
         display: grid;
         grid-template-columns: 3.5rem repeat(2, min-content) 1fr;
         grid-gap: 5rem;
+
+        @media only screen and (max-width: 50em) {
+            display: flex;
+
+            position: absolute;
+            top: 8rem;
+        }
 
         @media only screen and (max-width: 84.5em) {
             grid-template-columns: 1fr;
@@ -90,6 +126,10 @@
             
             -webkit-filter: invert(100%);
             filter: invert(100%);
+
+            @media only screen and (max-width: 50em) {
+                margin-left: -4rem;
+            }
         }
 
         img:hover,
