--- a/css/style.css
+++ b/css/style.css
@@ -480,6 +480,9 @@ html {
     width: 100%;
     padding: 10rem;
     margin-top: -7rem; }
+    @media only screen and (max-width: 50em) {
+      .about__img {
+        display: none; } }
     .about__img > img {
       height: 60rem; }
   .about__form {
@@ -487,17 +490,28 @@ html {
     padding-right: 10rem;
     margin-top: -8rem;
     margin-left: 3rem; }
+    @media only screen and (max-width: 50em) {
+      .about__form {
+        width: 100vw;
+        margin-top: 2rem;
+        margin-left: 5rem; } }
   .about__form--info {
     padding: 2rem;
     border: solid 3px inherit;
     border-radius: 12px 0 12px 0;
     display: flex;
     flex-direction: column; }
+    @media only screen and (max-width: 50em) {
+      .about__form--info {
+        padding-bottom: 2rem; } }
     .about__form--info > legend {
       font-family: 'Oi', sans-serif;
       font-size: 2rem;
       letter-spacing: 0.5rem;
       padding: 0 1rem; }
+      @media only screen and (max-width: 50em) {
+        .about__form--info > legend {
+          font-size: 1.4rem; } }
     .about__form--info > .sub-wrapper {
       display: flex;
       align-items: center;
@@ -529,6 +543,10 @@ html {
       margin-top: -1.9rem;
       font-family: 'Permanent Marker', 'Pangolin', sans-serif;
       letter-spacing: 1px; }
+      @media only screen and (max-width: 50em) {
+        .about__form--info > .about--wrapper #details, .about__form--info > .about--wrapper #actions, .about__form--info > .about--wrapper #inventory {
+          font-size: 1.2rem;
+          padding-bottom: 3rem; } }
     .about__form--info > .about--wrapper #actions,
     .about__form--info > .about--wrapper #inventory {
       font-family: 'Redacted Script', sans-serif; }
@@ -547,6 +565,10 @@ html {
     font-family: 'Permanent Marker', sans-serif;
     letter-spacing: 1px;
     pointer-events: none; }
+    @media only screen and (max-width: 50em) {
+      .about__form--info > .about--wrapper > input,
+      .about__form--info > .about--wrapper > #skills > .skills-wrapper > input {
+        font-size: 1.2rem; } }
   .about__form--info > .about--wrapper > #skills {
     border: none; }
     .about__form--info > .about--wrapper > #skills > legend {
