--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -9,6 +9,10 @@
         padding: 10rem;
         margin-top: -7rem;
 
+        @media only screen and (max-width: 50em) {
+            display: none;
+        }
+
         & > img {
             height: 60rem;
         }
@@ -19,6 +23,12 @@
         padding-right: 10rem;
         margin-top: -8rem;
         margin-left: 3rem;
+
+        @media only screen and (max-width: 50em) {
+            width: 100vw;
+            margin-top: 2rem;
+            margin-left: 5rem;
+        }
     }
 
     &__form--info {
@@ -29,11 +39,19 @@
         display: flex;
         flex-direction: column;
 
+        @media only screen and (max-width: 50em) {
+            padding-bottom: 2rem;
+        }
+
         & > legend {
             font-family: 'Oi', sans-serif;
             font-size: 2rem;
             letter-spacing: 0.5rem;
             padding: 0 1rem;
+
+            @media only screen and (max-width: 50em) {
+                font-size: 1.4rem;
+            }
         }
 
         & > .sub-wrapper {
@@ -80,6 +98,11 @@
             margin-top: -1.9rem;
             font-family: 'Permanent Marker', 'Pangolin', sans-serif;
             letter-spacing: 1px;
+
+            @media only screen and (max-width: 50em) {
+                font-size: 1.2rem;
+                padding-bottom: 3rem;
+            }
         }
 
         #actions,
@@ -111,6 +134,10 @@
         letter-spacing: 1px;
 
         pointer-events: none;
+
+        @media only screen and (max-width: 50em) {
+            font-size: 1.2rem;
+        }
     }
 
     &__form--info > &--wrapper > #skills {
