--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -4,6 +4,10 @@
     height: 80vh;
     width: 100%;
 
+    @media only screen and (max-width: 50em) {
+        margin-right: -10rem;
+    }
+
     &__img {
         width: 100%;
         padding: 10rem;
