--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -14,6 +14,8 @@
     @media only screen and (max-width: 50em) {
         grid-template-columns: 1fr;
         grid-template-rows: min-content 1fr;
+
+        margin-right: -10rem;
     }
 
     &__nav {
