add padding to projects container

--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,8 @@ html {
         width: 50rem;
         margin-left: -18rem;
         margin-top: -7rem;
-        border-left: none; } }
+        border-left: none;
+        padding-left: 6rem; } }
   .projects__container > .project > .project__image {
     width: 100%;
     text-align: center; }
