--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -101,7 +101,7 @@
             margin-left: -18rem;
             margin-top: -7rem;
             border-left: none;
-            // margin-right: 13rem;
+            padding-left: 6rem;
         }
     }
 
