--- a/css/style.css
+++ b/css/style.css
@@ -306,6 +306,9 @@ html {
     margin-top: 8.25rem;
     padding-top: 3rem;
     width: 100%; }
+    @media only screen and (max-width: 50em) {
+      .home__data--img {
+        width: 120%; } }
     .home__data--img > img {
       width: 100%;
       height: 75rem;
