--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -13,7 +13,6 @@
         @media only screen and (max-width: 50em) {
             flex-direction: column;
             position: relative;
-            // padding-top: 10rem;
         }
     }
 
@@ -21,10 +20,9 @@
         margin-top: 8.25rem;
         padding-top: 3rem;
         width: 100%;
-        
+
         @media only screen and (max-width: 50em) {
-            // margin-top: 20rem;
-            // padding-top: 10rem;
+            width: 120%;
         }
 
         & > img {
@@ -32,10 +30,6 @@
             height: 75rem;
             object-fit: cover;
             margin-bottom: -0.5rem;
-
-            @media only screen and (max-width: 50em) {
-                // height: 60rem;
-            }
         }
     }
 
