--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -8,6 +8,11 @@
         margin-right: -10rem;
     }
 
+    @media only screen and (min-width: 51em) and (max-width: 70em) {
+        margin-left: -10rem;
+        margin-top: -20rem;
+    }
+
     &__img {
         width: 100%;
         padding: 10rem;
@@ -15,6 +20,10 @@
 
         @media only screen and (max-width: 50em) {
             display: none;
+        }
+
+        @media only screen and (min-width: 51em) and (max-width: 70em) {
+            margin-top: 20rem;
         }
 
         & > img {
